# rag-with-chroma

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile
app/src/: main.py
app/src/model/: connection.py  utils.py
app/src/services/: ingest_profile_from_pool.py
app/src/services/api/: ingest_profile_service.py  main.py  router.py
app/src/services/api/v1/: documents.py  health.py
app/src/services/ui/: Dockerfile  dashboard.py  list_page.py  upload_page.py
