[project]
name = "rag-with-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi>=0.117.0",
    "llama-index>=0.14.3",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-vector-stores-chroma>=0.5.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.36.0",
]
